mail: Syracuse has enabled total vendor lock-in.
Sometime in early 2021 Outlook transitioned to its own custom OAuth
protocol for IMAP authentication, thus completing total vendor lock-in.
And Syracuse ITS grunts are completly oblivious to such things.  There
are ways to get Outlook's OAuth2 to work with OfflineIMAP/msmtp, but
they're too convoluted for my liking, so I no longer use Outlook with
Mutt, and instead forward my Outlook messages to my Posteo account that
has saner protocols.

--- a/msmtp/.msmtprc
+++ b/msmtp/.msmtprc
@@ -4,10 +4,10 @@
 # engineered spam filters that mark messages as spam based on the
 # "Received:" header.
 
-# Gandi {{{1
-# ----------
+# Polhode {{{1
+# ------------
 
-account gandi
+account polhode
 domain [192.168.1.1]
 host mail.gandi.net
 port 465
@@ -20,7 +20,7 @@ tls_starttls off
 
 from manu@polhode.org
 user manu@polhode.org
-passwordeval "pass email/gandi | head -n 1"
+passwordeval "pass email/polhode | head -n 1"
 
 # Gmail {{{1
 # ----------
