--- a/offlineimap/.offlineimaprc
+++ b/offlineimap/.offlineimaprc
@@ -4,7 +4,7 @@
 # ---------------------
 
 [general]
-accounts = gmail, polhode, posteo, yahoo
+accounts = posteo, polhode
 ui = ttyui
 socktimeout = 90
 pythonfile = ~/.offlineimap.py
