mbsync: added new configuration files.

--- a/notmuch/.notmuch-config
+++ b/notmuch/.notmuch-config
@@ -50,7 +50,8 @@ path=/home/manu/mail
 #
 [new]
 tags=unread
-ignore=local;spam;trash;yahoo
+ignore=local;spam;trash;yahoo;.mbsyncstate;.uidvalidity;
+
 
 # Search configuration {{{1
 #
