--- a/aria2/.aria2/aria2.conf
+++ b/aria2/.aria2/aria2.conf
@@ -3,30 +3,21 @@
 # Disable asynchronous (i.e., non-blocking) DNS.
 async-dns = false
 
-# Don't check SSL certificates.
-check-certificate = false
-
 # Continue downloading a partially downloaded file.
 continue = true
 
-# Breaks some DNS servers.
-# disable-ipv6 = true
-
 # Specify file allocation method. falloc is the best choice for newer file
 # systems (ext4, btrfs, etc.). It allocates large (few GiB) files almost
-# instantly.  Will not work on FAT32 file systems.
-file-allocation = none
-# file-allocation = falloc
+# instantly.  Will *not* work on FAT32 file systems.
+file-allocation = falloc
 
 # The maximum number of connections to one server for each download.
-# max-connection-per-server = 10
 max-connection-per-server = 4
 
 # aria2 does not split less than 2*SIZE byte range.
-min-split-size = 8M
+min-split-size = 20M
 
-# Download a file using N (20) connections.
-# split = 20
+# Download a file using N (4) connections.
 split = 4
 
 # Suppress output download progress summary.
