--- a/wget/.wgetrc
+++ b/wget/.wgetrc
@@ -4,7 +4,9 @@
 continue = on
 
 # Pretend to be Google Chrome on Windows.
-user_agent = "Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/74.0.3729.169 Safari/537.36"
+# Don't use double quotes to wrap the user-agent string as wget assumes that
+# a double quote is part of the string.  https://news.ycombinator.com/item?id=10885395
+user_agent = 'Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/91.0.4472.101 Safari/537.36'
 
 # Consider "connection refused" as a temporary error and try again.
 retry_connrefused = on
@@ -14,9 +16,6 @@ trust_server_names = on
 
 # Follow FTP links from HTML documents by default.
 follow_ftp = on
-
-# Prefer IPv4 connections.
-prefer_family = IPv4
 
 # Ignore robots.txt and <meta name=robots content=nofollow>.
 robots = off
