mpv: more tweaks.

--- a/mpv/.config/mpv/mpv.conf
+++ b/mpv/.config/mpv/mpv.conf
@@ -7,9 +7,13 @@ alang = en
 # 5 channel audio will be converted to stereo)
 audio-channels = "stereo"
 
-# Use Intel's iGPU to decode video.
+# Always show window, even for audio files.
+force-window = yes
+
+# Forcibly enable any hardware decoder found.  On modern Intel mobile CPUs, the
+# vaapi decoder is selected if no other decoders are found.
 # https://lists.debian.org/debian-user/2018/06/msg00306.html
-hwdec = vaapi
+hwdec = auto
 
 # Loop playlist infinitely.
 loop = inf
