tridactyl: go back to old Google URL.

--- a/tridactyl/.tridactylrc
+++ b/tridactyl/.tridactylrc
@@ -104,7 +104,7 @@ set searchurls.rat https://duckduckgo.com/?q=\+site:rationalwiki.org+%s
 " Search
 set searchurls.d https://duckduckgo.com/?q=%s&kt=n&kaj=m&kae=b
 set searchurls.dict https://www.dictionary.com/browse/%s
-set searchurls.g https://www.google.com/search?tbs=li:1&q=%s
+set searchurls.g https://www.google.com/search?q=%s
 set searchurls.t http://www.thesaurus.com/browse/%s?s=t
 set searchurls.urban https://duckduckgo.com/?q=\+site:urbandictionary.com+%s
 set searchurls.w https://duckduckgo.com/?q=\+site:en.wikipedia.org+%s
