--- a/mpv/.config/mpv/mpv.conf
+++ b/mpv/.config/mpv/mpv.conf
@@ -1,15 +1,11 @@
 # vim: ft=conf fdm=marker et sts=2 sw=2
 
-# Use the HQ GPU profile.  To see the specific options set by gpu-hq, run
-# mpv --show-profile=gpu-hq
-profile = gpu-hq
+# Pick English audio from available soundtracks.
+alang = en
 
 # Force stereo audio since I almost always watch movies with a headphone (e.g.,
 # 5 channel audio will be converted to stereo)
 audio-channels = "stereo"
-
-# Same as `scale', but for chroma (color?) scaling.
-cscale = ewa_lanczossharp
 
 # Always show window, even for audio files.
 force-window = yes
@@ -18,10 +14,6 @@ force-window = yes
 # vaapi decoder is selected if no other decoders are found.
 # https://lists.debian.org/debian-user/2018/06/msg00306.html
 hwdec = auto
-
-# Reduce stuttering caused by mismatches in the video fps and display refresh
-# rate (also known as judder).
-interpolation
 
 # Loop playlist infinitely.
 loop = inf
@@ -37,9 +29,6 @@ volume-max = 300
 
 # Resume playback after quitting.
 save-position-on-quit
-
-# Use an Elliptic weighted average Lanczos scaling when upscaling videos.
-scale = ewa_lanczossharp
 
 # Screenshots in the parent directory of the video.
 screenshot-template = "%x%F_%n"
@@ -59,11 +48,3 @@ sub-font-size = 42
 
 # Pretend to be Google Chrome on Windows.
 user-agent = "Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/91.0.4472.101 Safari/537.36"
-
-# Filter used for temporal interpolation.
-tscale = oversample
-
-# Synchronize audio/video by resampling audio.  This means that occasionally,
-# the audio pitch might change slightly, but that's still better than dropped
-# video frames.
-video-sync = display-resample
