--- a/mpv/.config/mpv/mpv.conf
+++ b/mpv/.config/mpv/mpv.conf
@@ -48,3 +48,6 @@ sub-font-size = 42
 
 # Pretend to be Google Chrome on Windows.
 user-agent = "Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/91.0.4472.101 Safari/537.36"
+
+# Half the YT videos are junk.  So let's conserve bandwidth.
+ytdl-format="[height<=720]/best"
