--- a/git/.gitconfig
+++ b/git/.gitconfig
@@ -15,7 +15,7 @@
   cl = clone
   co = checkout
   dc = diff --cached
-  df = diff
+  df = diff --diff-filter=d
   dt = difftool
   empty-commit = commit --allow-empty-message -m ''
   lg = log --branches --graph --pretty=format:'%Cred%h%Creset -%C(yellow)%d%Creset %s %Cgreen(%cr) %C(blue)[%an]%Creset' --abbrev-commit --date-order
