--- a/mpv/.config/mpv/mpv.conf
+++ b/mpv/.config/mpv/mpv.conf
@@ -30,7 +30,9 @@ volume-max = 300
 # Resume playback after quitting.
 save-position-on-quit
 
-# Screenshots in the parent directory of the video.
+# Screenshots in PNG with high compression in the parent directory of the video.
+screenshot-format = png
+screenshot-png-compression = 9
 screenshot-template = "%x%F_%n"
 
 # Load all subtitles in the current directory.
@@ -45,6 +47,9 @@ sub-pos = 90
 # Font for subtitles.
 sub-font = "Nimbus Sans L"
 sub-font-size = 42
+
+# Force ASS subtitles to use our style.
+sub-ass = no
 
 # Pretend to be Google Chrome on Windows.
 user-agent = "Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/91.0.4472.101 Safari/537.36"
