--- a/mpv/.config/mpv/mpv.conf
+++ b/mpv/.config/mpv/mpv.conf
@@ -3,6 +3,9 @@
 # Pick English audio from available soundtracks.
 alang = en
 
+# Pick english subtitles if available.
+slang = en,eng,enUS,en-US,enGB,en-GB,unknown
+
 # Force stereo audio since I almost always watch movies with a headphone (e.g.,
 # 5 channel audio will be converted to stereo)
 audio-channels = "stereo"
@@ -12,7 +15,6 @@ force-window = yes
 
 # Forcibly enable any hardware decoder found.  On modern Intel mobile CPUs, the
 # vaapi decoder is selected if no other decoders are found.
-# https://lists.debian.org/debian-user/2018/06/msg00306.html
 hwdec = auto
 
 # Loop playlist infinitely.
@@ -53,6 +55,3 @@ sub-ass = no
 
 # Pretend to be Google Chrome on Windows.
 user-agent = "Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/91.0.4472.101 Safari/537.36"
-
-# Half the YT videos are junk.  So let's conserve bandwidth.
-ytdl-format = "[height<=720]/best"
