--- a/youtube-dl/.config/youtube-dl.conf
+++ b/youtube-dl/.config/youtube-dl.conf
@@ -26,3 +26,6 @@
 
 # Use aria2 as an external downloader
 --external-downloader aria2c
+
+# Download only <= 1080p videos.
+--format 'bestvideo[height<1080]+bestaudio/best[height<=1080]'
