--- a/youtube-dl/.config/youtube-dl.conf
+++ b/youtube-dl/.config/youtube-dl.conf
@@ -28,4 +28,4 @@
 --external-downloader aria2c
 
 # Download only <= 1080p videos.
---format 'bestvideo[height<1080]+bestaudio/best[height<=1080]'
+--format 'bestvideo[height<=1080]+bestaudio/best[height<=1080]'
