--- a/qpdfview/.config/qpdfview/qpdfview.conf
+++ b/qpdfview/.config/qpdfview/qpdfview.conf
@@ -1,6 +1,7 @@
 [documentView]
 autoRefresh=true
 continuousMode=true
+highlightDuration=1000
 matchCase=false
 openUrl=true
 sourceEditor=/home/manu/code/scripts/e +%2 %1
@@ -16,5 +17,5 @@ editToolBar=currentPage, firstPage, previousPage, nextPage, lastPage, copyToClip
 viewToolBar=scaleFactor, zoomIn, zoomOut, ontinuousMode, twoPagesMode, rotateLeft, rotateRight, presentation
 
 [pageItem]
-backgroundColor=@Variant(\0\0\0\x43\x1\xff\xff\x80\x80\x80\x80\x80\x80\0\0)
+backgroundColor=@Variant(\0\0\0\x43\x1\xff\xff\x33\x33\x33\x33\x33\x33\0\0)
 decorateLinks=false
