tmux: update to 3.1c (Debian 11).

--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -40,8 +40,8 @@ set-option -g window-status-format "#[fg=brightcyan]#I #W"
 set-option -g window-status-current-format "#[fg=brightmagenta][ #[fg=brightwhite]#I #W #[fg=brightmagenta]]"
 
 # Make the border of the active pane more conspicuous.
-set-option -g pane-active-border-fg brightgreen
-set-option -g pane-border-fg brightblack
+set-option -g pane-active-border-style fg=brightgreen
+set-option -g pane-border-style fg=brightblack
 
 # Window options {{{1
 # -------------------
