--- a/etc/tlp.conf
+++ b/etc/tlp.conf
@@ -52,8 +52,8 @@ MAX_LOST_WORK_SECS_ON_BAT=60
 #   you should know what you're doing! You *must* disable your distribution's
 #   governor settings or conflicts will occur.
 # Default: <none>
-#CPU_SCALING_GOVERNOR_ON_AC=powersave
-#CPU_SCALING_GOVERNOR_ON_BAT=powersave
+CPU_SCALING_GOVERNOR_ON_AC=performance
+CPU_SCALING_GOVERNOR_ON_BAT=powersave
 
 # Set the min/max frequency available for the scaling governor.
 # Possible values depend on your CPU. For available frequencies see
