--- a/gnupg/.gnupg/gpg-agent.conf
+++ b/gnupg/.gnupg/gpg-agent.conf
@@ -7,4 +7,4 @@ default-cache-ttl-ssh 604800
 max-cache-ttl-ssh 604800
 
 # Use the GTK pinentry program to prompt for passphrases.
-pinentry-program /usr/bin/pinentry-gtk-2
+pinentry-program /usr/bin/pinentry-qt
