--- a/i3/.config/i3/config
+++ b/i3/.config/i3/config
@@ -112,14 +112,14 @@ bindsym $mod+Shift+r restart
 
 # Start dmenu/rofi.
 # bindsym $mod+d exec dmenu_run -fn 'Source Code Pro Semibold:size=9'
-bindsym $mod+d exec rofi -dpi $QT_FONT_DPI -show-icons -show drun
+bindsym $mod+d exec rofi -show-icons -show drun
 
 # Run passmenu -- a script to choose pass-managed password store
 # entries using dmenu/rofi.
 bindsym $mod+p exec passmenu
 
 # Switch windows using rofi.
-bindsym $mod+i exec rofi -dpi $QT_FONT_DPI -show window
+bindsym $mod+i exec rofi -show window
 
 # Mouse bindings {{{2
 # -------------------
