--- a/git/.gitconfig
+++ b/git/.gitconfig
@@ -24,7 +24,7 @@
   lg = log --branches --graph --pretty=format:'%Cred%h%Creset -%C(yellow)%d%Creset %s %Cgreen(%cr) %C(blue)[%an]%Creset' --abbrev-commit --date-order
   root = rev-parse --show-toplevel
   st = status -s
-  texdiff = !git-latexdiff --latexmk --ln-untracked --quiet --latexpand --makeatletter
+  texdiff = !git-latexdiff --latexmk --ln-untracked --quiet --latexpand --makeatletter --ignore-latex-errors
   wd = diff --word-diff
 
 [color]
