User Inter as the UI font.

--- a/gtk/.config/gtk-3.0/settings.ini
+++ b/gtk/.config/gtk-3.0/settings.ini
@@ -1,4 +1,4 @@
 [Settings]
-gtk-font-name = Nimbus Sans L 10
+gtk-font-name = Inter 10
 gtk-theme-name = Adwaita-dark
 gtk-icon-theme-name = Adwaita
