--- a/git/.gitconfig
+++ b/git/.gitconfig
@@ -19,6 +19,7 @@
   co = checkout
   dc = diff --cached
   df = diff --diff-filter=d
+  dl = clone --depth=1
   dt = difftool
   empty-commit = commit --allow-empty-message -m ''
   lg = log --branches --graph --pretty=format:'%Cred%h%Creset -%C(yellow)%d%Creset %s %Cgreen(%cr) %C(blue)[%an]%Creset' --abbrev-commit --date-order
