ssh: SOCKS proxy thru mouse

--- a/ssh/.ssh/config
+++ b/ssh/.ssh/config
@@ -18,6 +18,7 @@ Host mouse
     HostName 95.168.168.210
     User spinor
     LocalForward 2200 95.168.168.210:22
+    DynamicForward 8080
 
 Host smatter
     HostName smatter-login.syr.edu
