fontconfig: change default fonts
Earlier I was using the Nimbus fonts as the default sans/serif fonts.
However, some applications, e.g., Inkscape, have trouble picking up
these fonts as they aren't distributed as TTF/OTF.  Thus, use
FreeSans/FreeSerif as the default fonts.

--- a/fontconfig/.config/fontconfig/fonts.conf
+++ b/fontconfig/.config/fontconfig/fonts.conf
@@ -158,7 +158,7 @@
 
     <!-- Default sans font -->
     <alias>
-      <family>Nimbus Sans L</family>
+      <family>FreeSans</family>
       <default>
         <family>sans-serif</family>
       </default>
@@ -166,13 +166,13 @@
     <alias>
       <family>sans-serif</family>
       <prefer>
-        <family>Nimbus Sans L</family>
+        <family>FreeSans</family>
       </prefer>
     </alias>
 
     <!-- Default serif font -->
     <alias>
-      <family>Nimbus Roman No9 L</family>
+      <family>FreeSerif</family>
       <default>
         <family>serif</family>
       </default>
@@ -180,7 +180,7 @@
     <alias>
       <family>serif</family>
       <prefer>
-        <family>Nimbus Roman No9 L</family>
+        <family>FreeSerif</family>
       </prefer>
     </alias>
 </fontconfig>
