--- a/ssh/.ssh/config
+++ b/ssh/.ssh/config
@@ -3,6 +3,10 @@ Host *
     Compression yes
     ServerAliveCountMax 5
     ServerAliveInterval 120
+    # Don't hash hostnames in ~/.ssh/known_hosts
+    # It doesn't provide much security anyway:
+    # https://security.stackexchange.com/q/56268
+    HashKnownHosts no
 
 Host boron
     HostName 192.168.1.100
