--- a/conda/.condarc
+++ b/conda/.condarc
@@ -1,10 +1,10 @@
-# This is a sample .condarc file
-
 # channel locations. These override conda defaults, i.e., conda will
 # search *only* the channels listed here, in the order given. Use "defaults" to
 # automatically include all default channels. Non-url channels will be
 # interpreted as binstar usernames (this can be changed by modifying the
 # channel_alias key; see below).
 channels:
-  - conda-forge 
+  - conda-forge
   - defaults
+
+channel_priority: strict
