--- a/i3/.config/i3/config
+++ b/i3/.config/i3/config
@@ -1,4 +1,5 @@
 # i3wm configuration.
+# vim: ft=conf fdm=marker et sts=2 sw=2
 
 # Basic {{{1
 # ----------
@@ -205,7 +206,7 @@ mode "$mode_open" {
   bindsym b exec firefox; mode "default"
   bindsym f exec spacefm $HOME; mode "default"
   bindsym m exec deadbeef; mode "default"
-  bindsym p exec ff-private; mode "default"
+  bindsym p exec firefox-private; mode "default"
 
   bindsym Escape mode "default"
   bindsym Return mode "default"
