--- a/fontconfig/.config/fontconfig/fonts.conf
+++ b/fontconfig/.config/fontconfig/fonts.conf
@@ -158,7 +158,7 @@
 
     <!-- Default sans font -->
     <alias>
-      <family>FreeSans</family>
+      <family>Inter</family>
       <default>
         <family>sans-serif</family>
       </default>
@@ -166,7 +166,7 @@
     <alias>
       <family>sans-serif</family>
       <prefer>
-        <family>FreeSans</family>
+        <family>Inter</family>
       </prefer>
     </alias>
 
