--- a/mpv/.config/mpv/mpv.conf
+++ b/mpv/.config/mpv/mpv.conf
@@ -52,3 +52,8 @@ sub-font-size = 42
 
 # Pretend to be Google Chrome on Windows.
 user-agent = "Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/91.0.4472.101 Safari/537.36"
+
+# Allow local file/directory based configuration files.
+# If mpv.conf exists in a directory, it's loaded.  Similar, if
+# video.mp4.conf exists, it's loaded when playing video.mp4.
+use-filedir-conf
