--- a/mpv/.config/mpv/mpv.conf
+++ b/mpv/.config/mpv/mpv.conf
@@ -57,3 +57,6 @@ user-agent = "Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTM
 # If mpv.conf exists in a directory, it's loaded.  Similar, if
 # video.mp4.conf exists, it's loaded when playing video.mp4.
 use-filedir-conf
+
+# Prepend the watch later config files with the name of the file they refer to.
+write-filename-in-watch-later-config
