--- a/ssh/.ssh/config
+++ b/ssh/.ssh/config
@@ -18,10 +18,10 @@ Host lithium
     User manu
     ForwardX11 yes
 
-Host mouse
-    HostName 95.168.168.210
+Host comet
+    HostName 95.168.162.225
     User spinor
-    LocalForward 2200 95.168.168.210:22
+    LocalForward 2200 95.168.162.225:22
     DynamicForward 1234
 
 Host smatter
