--- a/xdg/.local/share/applications/pdfcropper.desktop
+++ b/xdg/.local/share/applications/pdfcropper.desktop
@@ -3,8 +3,8 @@ Name=PDF Cropper
 GenericName=PDF cropping tool
 Icon=edit-cut
 Comment=Crop PDF files
-Exec=pdf-cropper %F
-TryExec=pdf-cropper
+Exec=pdfcropper %F
+TryExec=pdfcropper
 Categories=Office;
 StartupNotify=false
 Terminal=false
