--- a/youtube-dl/.config/youtube-dl.conf
+++ b/youtube-dl/.config/youtube-dl.conf
@@ -13,7 +13,7 @@
 --write-sub
 
 # Languages of the subtitles to download separated by commas
---sub-lang en
+--sub-lang en,eng,enUS,en-US,enGB,en-GB,unknown
 
 # Embed subtitles in the video (only for mp4 videos)
 --embed-subs
