--- a/aria2/.aria2/aria2.conf
+++ b/aria2/.aria2/aria2.conf
@@ -28,3 +28,6 @@ user-agent = "Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTM
 
 # Deflate gzip compressed data.
 http-accept-gzip = true
+
+# Don't bother with certificate check.
+check-certificate = false
