--- a/mpv/.config/mpv/mpv.conf
+++ b/mpv/.config/mpv/mpv.conf
@@ -1,8 +1,5 @@
 # vim: ft=conf fdm=marker et sts=2 sw=2
 
-# Pick English audio from available soundtracks.
-alang = en
-
 # Pick english subtitles if available.
 slang = en,eng,enUS,en-US,enGB,en-GB,unknown
 
@@ -60,3 +57,6 @@ use-filedir-conf
 
 # Prepend the watch later config files with the name of the file they refer to.
 write-filename-in-watch-later-config
+
+# Start mpv with a window that's 75% of your screen resolution.
+autofit=75%x75%
