mathematica: update to 13.3.0

--- a/i3/.config/i3/config
+++ b/i3/.config/i3/config
@@ -321,8 +321,8 @@ for_window [class="mpv"] focus
 for_window [class="vlc"] move container to workspace 3
 for_window [class="vlc"] focus
 
-# TeX {{{5
-# --------
+# TeX (workspace 5) {{{2
+# ----------------------
 
 for_window [title="LaTeX" class="qpdfview"] move container to workspace 5
 for_window [title="LaTeX" class="qpdfview"] focus
