--- a/mpv/.config/mpv/mpv.conf
+++ b/mpv/.config/mpv/mpv.conf
@@ -58,5 +58,5 @@ use-filedir-conf
 # Prepend the watch later config files with the name of the file they refer to.
 write-filename-in-watch-later-config
 
-# Start mpv with a window that's 75% of your screen resolution.
-autofit=75%x75%
+# Start mpv with a window that's at least 75% of your screen resolution.
+autofit-smaller = 80%x80%
